--- a/AllstateCarProject/BooleanChart.xib
+++ b/AllstateCarProject/BooleanChart.xib
@@ -8,70 +8,61 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BooleanChart" customModule="AllstateCarProject" customModuleProvider="target">
             <connections>
                 <outlet property="dataSpace" destination="lnv-Jy-8yN" id="tR6-Uh-byt"/>
-                <outlet property="time" destination="gh2-PN-VNx" id="1WM-Uc-jIb"/>
+                <outlet property="scoreLabel" destination="gh2-PN-VNx" id="EPB-Ca-ix0"/>
                 <outlet property="title" destination="nFj-z3-OfK" id="E2V-mg-dd7"/>
                 <outlet property="view" destination="iN0-l3-epB" id="MeM-HP-kUP"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="621" height="338"/>
+            <rect key="frame" x="0.0" y="0.0" width="621" height="388"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TPO-zC-MFK">
-                    <rect key="frame" x="8" y="313" width="605" height="17"/>
+                    <rect key="frame" x="8" y="363" width="605" height="17"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fh9-md-G3f">
-                            <rect key="frame" x="0.0" y="0.0" width="33" height="17"/>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
-                            <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Finish" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cK8-Km-95S">
-                            <rect key="frame" x="565" y="0.0" width="40" height="17"/>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time &gt;&gt;&gt;&gt;&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fh9-md-G3f">
+                            <rect key="frame" x="0.0" y="0.0" width="80.5" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="cK8-Km-95S" secondAttribute="trailing" id="29f-pE-KKi"/>
-                        <constraint firstItem="cK8-Km-95S" firstAttribute="top" secondItem="TPO-zC-MFK" secondAttribute="top" id="95C-Ye-NLJ"/>
-                        <constraint firstAttribute="bottom" secondItem="Fh9-md-G3f" secondAttribute="bottom" id="CIP-we-5c7"/>
-                        <constraint firstItem="Fh9-md-G3f" firstAttribute="top" secondItem="TPO-zC-MFK" secondAttribute="top" id="HDF-lq-TPR"/>
-                        <constraint firstItem="Fh9-md-G3f" firstAttribute="leading" secondItem="TPO-zC-MFK" secondAttribute="leading" id="TZb-UL-NR5"/>
-                        <constraint firstAttribute="bottom" secondItem="cK8-Km-95S" secondAttribute="bottom" id="x8c-Fl-qyU"/>
+                        <constraint firstAttribute="bottom" secondItem="Fh9-md-G3f" secondAttribute="bottom" id="QoB-Ur-eLe"/>
+                        <constraint firstItem="Fh9-md-G3f" firstAttribute="leading" secondItem="TPO-zC-MFK" secondAttribute="leading" id="aHa-6D-dmI"/>
+                        <constraint firstItem="Fh9-md-G3f" firstAttribute="top" secondItem="TPO-zC-MFK" secondAttribute="top" id="phs-ah-F09"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4MS-uU-A2K">
-                    <rect key="frame" x="8" y="0.0" width="605" height="27"/>
+                    <rect key="frame" x="8" y="0.0" width="605" height="33.5"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFj-z3-OfK">
-                            <rect key="frame" x="0.0" y="0.0" width="44" height="27"/>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gh2-PN-VNx">
+                            <rect key="frame" x="562" y="4" width="42.5" height="25.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gh2-PN-VNx">
-                            <rect key="frame" x="561" y="0.0" width="36" height="27"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFj-z3-OfK">
+                            <rect key="frame" x="0.0" y="6" width="36.5" height="21.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstItem="gh2-PN-VNx" firstAttribute="top" secondItem="4MS-uU-A2K" secondAttribute="top" id="2yb-c4-DsZ"/>
-                        <constraint firstAttribute="bottom" secondItem="nFj-z3-OfK" secondAttribute="bottom" id="AaG-9G-9zK"/>
+                        <constraint firstAttribute="bottom" secondItem="nFj-z3-OfK" secondAttribute="bottom" constant="6" id="AaG-9G-9zK"/>
                         <constraint firstItem="nFj-z3-OfK" firstAttribute="leading" secondItem="4MS-uU-A2K" secondAttribute="leading" id="HE0-9M-cYd"/>
-                        <constraint firstItem="nFj-z3-OfK" firstAttribute="top" secondItem="4MS-uU-A2K" secondAttribute="top" id="SfO-Fk-OhU"/>
-                        <constraint firstAttribute="bottom" secondItem="gh2-PN-VNx" secondAttribute="bottom" id="WZq-FZ-sc3"/>
-                        <constraint firstAttribute="trailing" secondItem="gh2-PN-VNx" secondAttribute="trailing" constant="8" id="btE-0n-9ie"/>
+                        <constraint firstAttribute="bottom" secondItem="gh2-PN-VNx" secondAttribute="bottom" constant="4" id="WZq-FZ-sc3"/>
+                        <constraint firstAttribute="trailing" secondItem="gh2-PN-VNx" secondAttribute="trailing" id="btE-0n-9ie"/>
+                        <constraint firstItem="gh2-PN-VNx" firstAttribute="centerY" secondItem="4MS-uU-A2K" secondAttribute="centerY" id="cE0-9S-crp"/>
+                        <constraint firstItem="nFj-z3-OfK" firstAttribute="centerY" secondItem="4MS-uU-A2K" secondAttribute="centerY" id="l0J-g7-Vmh"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lnv-Jy-8yN" customClass="BooleanChartData" customModule="AllstateCarProject" customModuleProvider="target">
-                    <rect key="frame" x="8" y="26" width="605" height="287"/>
+                    <rect key="frame" x="8" y="33" width="605" height="330"/>
                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
@@ -90,7 +81,7 @@
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="241.5" y="62"/>
+            <point key="canvasLocation" x="241.5" y="87"/>
         </view>
     </objects>
 </document>
